finished equipamiento